# smaregi-platform-api

./: Makefile  README.md  config.yaml  smaregi-api.yaml
rust/: Cargo.toml  README.md
rust/.openapi-generator/: FILES
rust/docs/: ApplyConditionDivision.md  AwardType.md  CancelDivision.md  Coupon.md  CouponDivision.md  CouponItemsForTransactions.md  CouponsForTransactions.md  CreateCustomers.md  Customer.md  CustomerGroup.md  CustomerRequiredColumnDivision.md  CustomersResponseOfCreate.md  DefaultApi.md  DepositOthers.md  DisposeDivision.md  Error.md  ExpireDivision.md  GetCustomerPointListItem.md  GetCustomerRequiredColumnSettingResponse.md  GetCustomersItem.md  GetLayawayById.md  GetLayawayListItem.md  GetStoresResponseItem.md  GetStoresResponseItemReceiptPrintInfo.md  GetTransactionId.md  GetTransactionItem.md  Layaway.md  LayawayPickUp.md  MailReceiveFlag.md  MileageDivision.md  PatchCustomers.md  PointCondition.md  PointGivingDivision.md  PointSpendDivision.md  PointSpendLimitDivision.md  PointUpdateDivision.md  PointUseDivision.md  PostCreateCoupons.md  ProductDivision.md  ReturnSales.md  (+18 more)
rust/src/: lib.rs
rust/src/apis/: configuration.rs  default_api.rs
rust/src/models/: apply_condition_division.rs  award_type.rs  cancel_division.rs  coupon.rs  coupon_division.rs  coupon_items_for_transactions.rs  coupons_for_transactions.rs  create_customers.rs  customer.rs  customer_group.rs  customer_required_column_division.rs  customers_response_of_create.rs  deposit_others.rs  dispose_division.rs  error.rs  expire_division.rs  get_customer_point_list_item.rs  mod.rs  (+42 more)
(+378 files in other folders)
