[package]
name = "smaregi-api"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
log = "0.4.14"

[dependencies.reqwest]
version = "0.11.8"
default-features = false
features = ["json"]

[dev-dependencies]
